--- a/react/src/index.css
+++ b/react/src/index.css
@@ -15,5 +15,5 @@ body {
   min-height: 100vh;
   margin: 0;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow-x: hidden;
 }
